--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pillow>=10.4.0",
     "tqdm>=4.66.5",
     "tinytag @ git+https://github.com/tinytag/tinytag",
+    "pymupdf>=1.24.11",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
