refactor: move from tinytag to mutagen for performance

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,8 @@ authors = [
 dependencies = [
     "pillow>=10.4.0",
     "tqdm>=4.66.5",
-    "tinytag @ git+https://github.com/tinytag/tinytag",
     "pymupdf>=1.24.11",
+    "mutagen>=1.47.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
