--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sniffler"
-version = "0.2.0"
+version = "0.4.0"
 description = "Sniff out stuff about your files"
 authors = [
     { name = "Alexander Sevostianov" }
@@ -11,6 +11,7 @@ dependencies = [
     "pymupdf>=1.24.11",
     "mutagen>=1.47.0",
     "olefile>=0.47",
+    "customtkinter>=5.2.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.11"
