--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,15 @@ managed = true
 dev-dependencies = [
     "ruff>=0.6.8",
     "pyright>=1.1.382.post1",
+    "sphinx>=8.1.3",
+    "sphinx-autodoc-typehints>=2.5.0",
+    "sphinx-book-theme>=1.1.3",
 ]
 
 [tool.rye.scripts]
 dj = { call = "sniffler.django_manage" }
+build-docs = "sphinx-build -b html docs/source/ docs/build/html/"
+apidoc = "sphinx-apidoc -f -o docs/source/ src/sniffler/"
 
 [tool.hatch.metadata]
 allow-direct-references = true
